# ChangeLog for net-firewall/fwbuilder
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-firewall/fwbuilder/ChangeLog,v 1.108 2011/08/21 09:49:09 dilfridge Exp $

  21 Aug 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -fwbuilder-4.1.2.ebuild, -fwbuilder-4.1.3.ebuild:
  Remove old

  21 Aug 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  fwbuilder-4.2.2.3541.ebuild, +files/fwbuilder-4.2.2.3541-flags.patch,
  -files/fwbuilder-4.2.2.3541-ldflags.patch:
  Respect CFLAGS and CXXFLAGS, bug 372203

  23 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org>
  fwbuilder-4.2.2.3541.ebuild:
  ppc/ppc64 stable wrt #371011

  13 Jul 2011; Markus Meier <maekke@gentoo.org> fwbuilder-4.2.2.3541.ebuild:
  x86 stable, bug #371011

  20 Jun 2011; Markos Chandras <hwoarang@gentoo.org>
  fwbuilder-4.2.2.3541.ebuild:
  Stable on amd64 wrt bug #371011

  29 May 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  fwbuilder-4.2.2.3541.ebuild, +files/fwbuilder-4.2.2.3541-ccache.patch:
  Disable ccache and distcc autodetection, bug 346009

  29 May 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  fwbuilder-3.0.7.ebuild:
  Needs dev-java/antlr[static-libs] if useflag defined, bug 368325; EAPI bump

*fwbuilder-4.2.2.3541 (15 May 2011)

  15 May 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  +fwbuilder-4.2.2.3541.ebuild, +files/fwbuilder-4.2.2.3541-ldflags.patch:
  Version bump, now including libfwbuilder; bug 364515

  30 Mar 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -files/4.0.1-secure-mktemp.patch, -fwbuilder-3.0.3.ebuild,
  -fwbuilder-3.0.6.ebuild, -fwbuilder-4.0.1-r1.ebuild,
  -fwbuilder-4.0.1.ebuild, -fwbuilder-4.1.1.ebuild:
  Cleanup

  30 Mar 2011; Andreas K. Huettel <dilfridge@gentoo.org> metadata.xml:
  Adopted package

*fwbuilder-4.1.3 (29 Dec 2010)

  29 Dec 2010; Michael Weber <xmw@gentoo.org> +fwbuilder-4.1.3.ebuild:
  Version bump (bug 349928)

*fwbuilder-4.1.2 (22 Nov 2010)
