@@ -1,22 +1,28 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX 3.0.7-secure-mktemp.patch 987 RMD160 612e42ee68253b7d248afd8b039d97e25db0713d SHA1 cb68c5339e28fd13aa3f1b8ca11a2ca76ebf0162 SHA256 02c0811786b268d609b9ecac5b78135c53d32752c1846c63f23716b5de2617a8
 AUX 4.x-qmake-use-LDFLAGS.patch 460 RMD160 e2ca41d40105ff63611019af3e9b15b5468fe5e6 SHA1 7b8d2482a00c5d109249815a3ae9f068cd27ece5 SHA256 56c62f025b01f6ecf6c298909c4f64f5890524f8688199187139e354e801ce30
 AUX fwbuilder-4.2.2.3541-ccache.patch 930 RMD160 c0dcb60e659c3dc055dc45cb57d8091979654d1e SHA1 c9ae9432a59d56162009374e15d2defd86bf186b SHA256 869dc70d8a63b819e275d93be615f88df5d1bd7b0427ecfb29d766738f55bc4e
 AUX fwbuilder-4.2.2.3541-flags.patch 845 RMD160 11cf1b9b7ba867762170a8ee346f1256c6683a0c SHA1 d9acaf1cc3d5a9a3523d0923fb013317b68ab796 SHA256 6eb882ae30cebfbd7b735aae0f357db4067930b52e33b134cea6bb07628ed5d6
-DIST fwbuilder-3.0.7.tar.gz 2486382 RMD160 c57150a3de136add28a48fbc3b79aa1006b46963 SHA1 c08411bcf5b686ef86e1da6f0954d8685bf49d61 SHA256 bb827f54a77c0f8a9b471200eda3801c9ff3f2a576647ca6a576e546e20ac254
 DIST fwbuilder-4.2.2.3541.tar.gz 6830864 RMD160 8c79580460d7d6a93d7c0e620e39685ac9778c0d SHA1 d497564988d4ef78b7717dc06e2227486be498ba SHA256 90111e0d7fcad31a9eccdbbc4d9ca7ce5182c0d93e8f9dbd8c683c3c80980482
-EBUILD fwbuilder-3.0.7.ebuild 1835 RMD160 77fea53ba44fc9d26f8f8a35ea96035cfcaad1d5 SHA1 591e62bbf5dbacf8082f47aac32296b8d3921db4 SHA256 72bc754228dbcd6b0b83048867e23cc124dd1e8829828f20ae49fb60251efa9a
 EBUILD fwbuilder-4.2.2.3541.ebuild 1247 RMD160 0b70fd4dea811f59aa603cd44593f7aedc333fa6 SHA1 0f94e0f9c3841eb32d2f50d2e6594be572f59bf0 SHA256 fda82e7a06da2238ee5683821a573300622ef3bf68077f4255dd7ad76ece162d
-MISC ChangeLog 17679 RMD160 d13d32dedfccd8726f9192874bcf8e3e490ce6ab SHA1 c415e06b576f4ec2c718a7b66373d73e04a30e1f SHA256 acfd244b8027754eeb48d0bb7c32caa2782c3741b6b30d8d297e874c80cc4b0c
+MISC ChangeLog 17777 RMD160 2b00f9bbffb15447faf58a0a34b4db06b9cb5634 SHA1 4d61411ff28881d58257dd4eb8f8913a3948a524 SHA256 2b00328af6e2d0eb440b9430dbecbad71f2babc3fbc88ad909c2c67e57e4ecf1
 MISC metadata.xml 206 RMD160 b967edd506f5c81d39d3780a4aea6de552ed7dc6 SHA1 506856689ca68d1a2bea94731c288946ed1ec80a SHA256 65af0b215aead23b8b8599a0198e437c27ff219780e2629f3e825fe51941507b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iJwEAQEIAAYFAk59qT0ACgkQfXuS5UK5QB3CSAP+MvQdJYCm8QBtlgKDWC+xA8ey
-zCvN2wvYH97eX0UbRzI3350BYWh2gtbnxJSrxCyGRfACmnyPkgTuZFy+3uFnM2i9
-tpzhLhH4qx7YQ2t6dcIkntwP4ACh32hPH0BtAV5NnTztPAuMb2kS5CtfRTwheFAu
-UVufxzPIuqMVdFreUcc=
-=+ByO
+iQIcBAEBCgAGBQJOyWOOAAoJENwGBM22xffe5SEP/1h1xv34zqduhEoCRblRvyWq
+2/j165ex5t+NdIkppbrBFcUndiMABxxy+1a6BKq7d/eaY3rnmuCoysOU8iX0mMGl
+wFP1+LtsnpgES1PnRRp22NrNWnYPt7nUsXVL/aZolwhCt9ay7kDnP2su+M+TX73S
+xvdaEUo/lxGUKQfxT79BIqOnSlX5RrXwyeCQv7URxieYhhkTnCqO/sgQg254s0Sd
+C/58RjsCGXTtfw0kOGqRio9kmWhVXAJWWyva7NW6SFnpzSh6e9v3UfGIv4GOk413
+TcloFRV8Fd6NkO6Yl0llOmI9gmPxVwqwwcb2S9DeEes6645O+bO2ivZKUXbrxtVk
+YY9IFgQ+wUmtb2/vABQHncIeODUGDvkCxGvNOJbalVzPtA7MhNE/qUxX9tMiT1DY
+/3x3Bd0Gp5OtIK0fYS+8OV4jnc86M9BmS7eu4+f7ZHhlMWBMMgq2/ZVkYKjd0/1G
+gCkpbdgKTdD1qHMUNU7G7vj7mn1WfTz+dk8awQd9eoXVgK+2k/cUn6wfHt4dBfqE
+mXNklOX7d3kEQ2cNHKZDgDRrMEFVfFs0FCIFwpPE0cbsKZU5PcejnIw7PwxMVa8l
+mjR5ftYghhiZWXWeM/AQDpgKUTB4HFi/+VcnWowmFt2jRVlmscMAtZ7altkUZ57j
+toveLCM7d2wzcOvGvhKD
+=Amon
 -----END PGP SIGNATURE-----
