@@ -1,6 +1,10 @@
 # ChangeLog for net-firewall/fwbuilder
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/fwbuilder/ChangeLog,v 1.108 2011/08/21 09:49:09 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/fwbuilder/ChangeLog,v 1.109 2011/11/20 19:30:04 dilfridge Exp $
+
+  20 Nov 2011; Andreas K. Huettel <dilfridge@gentoo.org>
+  -fwbuilder-3.0.7.ebuild:
+  Remove old
 
   21 Aug 2011; Andreas K. Huettel <dilfridge@gentoo.org>
   -fwbuilder-4.1.2.ebuild, -fwbuilder-4.1.3.ebuild:
